--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
 	<script src="javascript/jquery-2.1.1.min.js"></script>
 	<script src="colpick-2.0.2/js/colpick.js" type="text/javascript"> </script>
+	<script src="javascript/tex_tiling.js" type="text/javascript"> </script>
 	<link rel="stylesheet" href="colpick-2.0.2/css/colpick.css" type="text/css"/>
 	<link type="text/css" rel="stylesheet" href="./style.css"></link>
 </head>
 
 <body>
+
+	<canvas id="texture" style="display:none;" width="256" height="256"> </canvas>
+	<div width=256 height=256>
+		<canvas id="texture_preview" width="256" height="256" style="border:1px solid #000000;">> </canvas>
+	</div>
+
 	<div class="color-box1"></div>
 	<div class="color-box2"></div>
 
@@ -18,6 +25,7 @@
 			color:'ffffff',
 			onSubmit:function(hsb,hex,rgb,el) {
 				$(el).css('background-color', '#'+hex);
+				setTiling('#'+hex, 1, 1, '#'+hex, 1, 1);
 				$(el).colpickHide();
 			}
 		}).css('background-color', '#ffffff');
