--- a/index.html
+++ b/index.html
@@ -42,8 +42,19 @@
 				
 					Texture type:
 					<select id="types" size="1" onchange="showType($(this).val())">
+						<option disabled>Celular</option>
+						<option disabled>Checker</option>
+						<option disabled>Falloff</option>
+						<option disabled>Gradient</option>
+						<option disabled>Marble</option>
+						<option disabled>Noise</option>
+						<option disabled>Smoke</option>
+						<option disabled>Splat</option>
+						<option disabled>Stucco</option>
+						<option disabled>Swirl</option>
 						<option selected>Tiles</option>
-						<option>Wood</option>
+						<option disabled>Waves</option>
+						<option disabled>Wood</option>
 					</select>
 				</div>
 				
