--- a/index.html
+++ b/index.html
@@ -210,10 +210,11 @@
 
 	<!-- Has to be down here! -->
 	<script src="javascript/tex_tiling.js" type="text/javascript"></script>
-	
-	
+	<script type="text/javascript" src="javascripts/ganalytics.js"></script>
+		
 	<script> 
 		updateTiling(); 
 	</script>
+
 	
 </html>
