--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 </body>
 
 	<!-- Has to be down here! -->
-	<script src="javascript/_helper.js" type="text/javascript"></script>
+	<script src="javascript/helper.js" type="text/javascript"></script>
 
 	<script src="javascript/tex_gradient.js" type="text/javascript"></script>
 	<script src="javascript/tex_tiling.js" type="text/javascript"></script>
