added createSlider, and standard colors

--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
 					<div class="gradient_preview"></div>
 					<div class="slider_area">
 						<hr class="slider_line" />
-						<div class="slider"></div>
-						<div class="slider" style="left:256px"></div>
-						
 					</div>
 					
 					<div>
@@ -253,6 +250,21 @@
 		
 	<script> 
 		updateTiling();
+		
+		/*
+		createSlider(0, 'ffff00');
+		createSlider(32, 'ff0000');
+		createSlider(64, 'ff00ff');
+		createSlider(96, '0000ff');
+		createSlider(128, '00ffff');
+		createSlider(196, '00ff00');
+		createSlider(256, 'ffff00');
+		*/
+		createSlider(0, 'e6d7c3');
+		createSlider(96, '262626');
+		createSlider(178, '665e52');
+		
+		
 		updateGradient();
 	</script>
 
