--- a/index.html
+++ b/index.html
@@ -98,11 +98,25 @@
 							Count
 						</td>
 						<td>
-							x <input type="number" id="checker_x" onchange="updateChecker();" style="width:45px;" min="1" value="2" max="50" />
+							x <input type="number" id="checker_x" onchange="updateChecker();" style="width:45px;" min="1" value="6" max="50" />
 						</td>
 						<td>
-							y <input type="number" id="checker_y" onchange="updateChecker();" style="width:45px;" min="1" value="2" max="50" />
+							y <input type="number" id="checker_y" onchange="updateChecker();" style="width:45px;" min="1" value="6" max="50" />
 						</td>
+					</tr>
+					<tr class="suboption_settings">
+						<td>
+							
+						</td>
+						<td>
+							Seed <input type="number" id="checker_seed" onchange="updateChecker();" style="width:45px;" min="1" value="1" max="1000" />
+						</td>
+						<td>
+							Percentage <input type="number" id="checker_percentage" onchange="updateChecker();" step="0.01" style="width:45px;" min="0" value="0.5" max="1" />
+						</td>
+					</tr>
+					<tr>
+						
 						<td>
 							<div class="checker_color1"></div>
 							<div class="checker_color2"></div>
@@ -272,6 +286,7 @@
 	<!-- Has to be down here! -->
 	<script src="javascript/helper.js" type="text/javascript"></script>
 
+	<script src="javascript/tex_checker.js" type="text/javascript"></script>
 	<script src="javascript/tex_gradient.js" type="text/javascript"></script>
 	<script src="javascript/tex_tiling.js" type="text/javascript"></script>
 	
@@ -295,6 +310,7 @@
 		
 		
 		updateGradient();
+		updateChecker();
 	</script>
 
 	
