added "Brick" to selection

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				
 					
 					<select id="types" size="1" onchange="showType($(this).val())">
+						<option disabled>Brick</option>
 						<option disabled>Celular</option>
 						<option selected>Checker</option>
 						<option disabled>Falloff</option>
