--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 
 <body>
 	<!-- space to top -->
-	<div style="min-height:100px"></div>
+	<div style="min-height:10px"></div>
 	
+	<br/>
+	<div align="center" >
+		<img width="200" height="200" src="images/logo.png" /><br/>
+	</div>
 	
+	<div style="min-height:10px"></div>
+
 	<div class="container">		
 	
 		<table><tr>
