showing more options

--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 					
 					<select id="types" size="1" onchange="showType($(this).val())">
 						<option selected>Brick</option>
-						<!--<option disabled>Celular</option>-->
+						<option disabled>Celular</option>
 						<option>Checker</option>
-						<!--<option disabled>Falloff</option>-->
+						<option disabled>Falloff</option>
 						<option>Gradient</option>
-						<!--<option disabled>Marble</option>
+						<option disabled>Marble</option>
 						<option disabled>Noise</option>
 						<option disabled>Smoke</option>
 						<option disabled>Splat</option>
 						<option disabled>Stucco</option>
-						<option disabled>Swirl</option>-->
+						<option disabled>Swirl</option>
 						<option>Tiles</option>
-						<!--<option disabled>Waves</option>
-						<option disabled>Wood</option>-->
+						<option disabled>Waves</option>
+						<option disabled>Wood</option>
 					</select>
 				</div>
 			</div>
