--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 	<script src="javascript/tex_gradient.js" type="text/javascript"></script>
 	<script src="javascript/tex_tiling.js" type="text/javascript"></script>
 	
-	<!--<script src="javascript/ganalytics.js" type="text/javascript" ></script>-->
+	<script src="javascript/ganalytics.js" type="text/javascript" ></script>
 		
 	<script> 
 		// initialization		
