added more types as comment

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 					
 						
 						<select id="types" size="1" onchange="showType($(this).val())">
+							<!-- concrete, gravel, textiles, peeling paint, scratches, rust, rock, leaf, reptile skin, boards, 
+							roofing, wallpaper, blood spatter, grime maps, cracked earth, human skin, fish scales,
+							fence, building facade, rubble, metal, dirt, leather, road signs-->
 							<option selected>Brick</option>
 							<option disabled>Celular</option>
 							<option>Checker</option>
