--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 	<script src="javascript/tex_perlin_noise.js" type="text/javascript"></script>
 	<script src="javascript/tex_tiling.js" type="text/javascript"></script>
 	
-	<!--<script src="javascript/ganalytics.js" type="text/javascript" ></script>-->
+	<script src="javascript/ganalytics.js" type="text/javascript" ></script>
 		
 	<script> 
 		// initialization		
