--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<title>TextureGenerator-Online</title>
 	<script src="javascript/jquery-2.1.1.min.js"></script>
 	<script src="javascript/jquery-ui.min.js"></script>
 	
@@ -13,6 +14,15 @@
 	<link type="text/css" rel="stylesheet" href="./css/style.css"></link>
 	<link type="text/css" rel="stylesheet" href="./css/tiles.css"></link>
 	<link type="text/css" rel="stylesheet" href="./css/gradient.css"></link>
+	<meta charset="utf-8">
+	<meta name="description" content="Online Texture Generator FREE! Create a Texture directly inside your browser! No Uploads required, completely client-based">
+	<meta name="author" content="Christian Petry">
+	<meta name="language" CONTENT="english">
+	<meta name="keywords" content="Texture,Generator,Online,Brick,Checker,Perlin Noise,Gradient,Tiles,cpetry,github,Texture-Generator,Javascript">
+	<meta name="date" content="2014-09-26">
+	<meta name="page-topic" content="Dienstleistung">
+	<meta name="robots" content="index,follow">
+	<meta http-equiv="reply-to" content="petry_christian@web.de">
 </head>
 
 <body>
