--- a/index.html
+++ b/index.html
@@ -522,6 +522,15 @@
 		</td>
 		</tr></table>
 	</div>
+
+
+	<div style="position: absolute; margin-top: -150px; margin-left: 30px; z-index:5; color: #111;
+	border-radius: 5px; padding: 5px 5px 5px 5px; background: none repeat scroll 0% 0% rgba(240,240,240,0.4);">
+		Need a NormalMap?<br/>
+		<a href="http://cpetry.github.io/NormalMap-Online/">
+			<img src="http://www.petry-christian.de/content_images/nmap_logo_trans_small.png" style="padding-top:5px"/>
+		</a>
+	</div>
 	
 </body>
 	
