--- a/index.html
+++ b/index.html
@@ -506,11 +506,18 @@
 			
 		</tr><tr>
 
-		<td align="center">
-			<p>
+		<td style="vertical-align:top;">
+			<div style="padding-top:10px; padding-left:20px; display:inline-block; text-align:center;">
 				Feedback:<br/>
 				<img src="images/email_adresse.png"/><br/>
-			</p>
+			</div>
+			<div style="padding-top:10px; padding-left:40px; display:inline-block; font-size: 14px; text-align:center;">
+				Right-click, "Save Image to..." or
+				<div style="min-height:5px"></div>
+				<a href="#" id="download" class="download" target="_blank">
+					<button style="width: 8em;  height: 2em;"><b>Download</b></button><!--<img src="images/Download_NormalMap_128.png"/>-->
+				</a>
+			</div>
 		</td><td align="center">
 			If you like this, please
 			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -543,6 +550,7 @@
 
 	<!-- Has to be down here! -->
 	<script src="javascript/helper.js" type="text/javascript"></script>
+	<script src="javascript/download.js" type="text/javascript"></script>
 	<script src="javascript/noise.js" type="text/javascript"></script>
 	<script src="javascript/gaussianblur.js" type="text/javascript"></script>
 
