--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
 								<td align="center">
 									<div style="display:inline-block;" class="colorpicker" id="textiles_color1"></div>
 									<div style="display:inline-block;" class="colorpicker" id="textiles_color2"></div>
+									<!--<div style="display:inline-block;" class="colorpicker" id="textiles_bgcolor"></div>-->
 								</td>
 							</tr>
 							<tr class="suboption_settings">
@@ -395,13 +396,13 @@
 									Thickness
 								</td>
 								<td>
-									<input type="range" id="textiles_thickness_slider" min="0.01" max="1" value="0.2" step="0.01"
+									<input type="range" id="textiles_thickness_slider" min="1" max="7" value="1" step="1"
 										onchange="document.getElementById('textiles_thickness').value = this.value; updateTexture();"
 										oninput=" document.getElementById('textiles_thickness').value = this.value; updateTexture();"
 										style="width:50%;vertical-align:top;">
 									 <input type="number" id="textiles_thickness" 
 									 onchange="document.getElementById('textiles_thickness_slider').value = this.value; updateTexture();"
-									 step="0.01" style="width:45px;" min="0.01" value="0.2" max="1" />
+									 step="1" style="width:45px;" min="1" value="1" max="7" />
 								</td>
 							</tr>
 
