first texture -> textiles

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 							<option disabled>Falloff</option>
 							<option>Gradient</option>
 							<option disabled>Marble</option>
-							<option selected>PerlinNoise</option>
+							<option>PerlinNoise</option>
 							<option disabled>Smoke</option>
 							<option disabled>Splat</option>
 							<option disabled>Stucco</option>
 							<option disabled>Swirl</option>
-							<option>Textiles</option>
+							<option selected>Textiles</option>
 							<option>Tiles</option>
 							<option disabled>Waves</option>
 							<option disabled>Wood</option>
@@ -262,7 +262,7 @@
 					</div>
 				
 					<!-- Perlin Noise --> 
-					<div class="type_settings" id="PerlinNoise" style="display:block"> <!-- display:block -> Show default texture -->
+					<div class="type_settings" id="PerlinNoise"> <!-- display:block -> Show default texture -->
 						<table align="center">
 						<tr class="option_settings_head">
 							<td colspan="3">
@@ -350,7 +350,7 @@
 					</div>
 					
 					<!-- Textiles -->
-					<div class="type_settings" id="Textiles">
+					<div class="type_settings" id="Textiles" style="display:block">
 						<table align="center">
 							<tr class="option_settings_head">
 								<td colspan="3">
