--- a/index.html
+++ b/index.html
@@ -357,6 +357,22 @@
 									Textiles Settings
 								</td>
 							</tr>
+							
+							<tr class="suboption_settings">
+								<td>
+									Pattern
+								</td>
+								<td align="center">
+									<div style="display:inline-block;" class="colorpicker">
+										<img class="textiles_pattern_selected" src = './pattern/pat1.png' />
+									</div>
+									<div style="display:inline-block;" class="colorpicker">
+										<img class="textiles_pattern" src = './pattern/pat2.png' />
+									</div>
+									<!--<div style="display:inline-block;" class="colorpicker" id="textiles_bgcolor"></div>-->
+								</td>
+							</tr>
+							
 							<tr class="suboption_settings">
 								<td>
 									Color
