--- a/index.html
+++ b/index.html
@@ -296,28 +296,16 @@
 								Scale
 							</td>
 							<td colspan=2>
-								x <input type="range" id="perlin_noise_scale_slider_x" min="1" max="20" value="1" step="0.01"
-									onchange="document.getElementById('perlin_noise_scale_x').value = this.value; updateTexture();"
-									oninput=" document.getElementById('perlin_noise_scale_x').value = this.value; updateTexture();"
+								<input type="range" id="perlin_noise_scale_slider" min="1" max="20" value="1" step="0.01"
+									onchange="document.getElementById('perlin_noise_scale').value = this.value; updateTexture();"
+									oninput=" document.getElementById('perlin_noise_scale').value = this.value; updateTexture();"
 									style="width:50%;vertical-align:top;">
-								<input type="number" id="perlin_noise_scale_x" 
-									onchange="document.getElementById('perlin_noise_scale_slider_x').value = this.value; updateTexture();"
+								<input type="number" id="perlin_noise_scale" 
+									onchange="document.getElementById('perlin_noise_scale_slider').value = this.value; updateTexture();"
 									style="width:52px;" min="1" value="1" max="20" step="0.01"/>
 							</td>
 						</tr>
-						<tr class="suboption_settings">	
-							<td></td>
-							<td colspan=2>
-								y <input type="range" id="perlin_noise_scale_slider_y" min="1" max="20" value="1" step="0.01"
-									onchange="document.getElementById('perlin_noise_scale_y').value = this.value; updateTexture();"
-									oninput=" document.getElementById('perlin_noise_scale_y').value = this.value; updateTexture();"
-									style="width:50%;vertical-align:top;">
-								<input type="number" id="perlin_noise_scale_y" 
-									onchange="document.getElementById('perlin_noise_scale_slider_y').value = this.value; updateTexture();"
-									style="width:52px;" min="1" value="1" max="20" step="0.01"/>
-							</td>
-						</tr>
-						
+												
 						<tr class="suboption_settings">
 							<td>
 								Blur
