--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
 	<title>TextureGenerator-Online</title>
-	<script src="javascript/jquery-2.1.1.min.js"></script>
-	<script src="javascript/jquery-ui.min.js"></script>
+	<script src="javascript/extern/jquery-2.1.1.min.js"></script>
+	<script src="javascript/extern/jquery-ui.min.js"></script>
 	
+	<!-- Colpick -->
 	<script src="colpick-2.0.2/js/colpick.js" type="text/javascript"> </script>
-	
+	<link rel="stylesheet" href="colpick-2.0.2/css/colpick.css" type="text/css"/>
+
 	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:700"></link>
 
-	<link rel="stylesheet" href="colpick-2.0.2/css/colpick.css" type="text/css"/>
+	
 
 	<link type="text/css" rel="stylesheet" href="./css/style.css"></link>
 	<link type="text/css" rel="stylesheet" href="./css/tiles.css"></link>
@@ -775,12 +777,23 @@
 				Feedback:<br/>
 				<img src="images/email_adresse.png"/><br/>
 			</div>
-			<div style="padding-top:10px; padding-left:40px; display:inline-block; font-size: 14px; text-align:center;">
-				Right-click, "Save Image to..." or
-				<div style="min-height:5px"></div>
-				<a href="#" id="download" class="download" target="_blank">
-					<button style="width: 8em;  height: 2em;"><b>Download</b></button><!--<img src="images/Download_NormalMap_128.png"/>-->
-				</a>
+			<div style="padding-top:10px; padding-left:30px; display:inline-block; font-size: 14px; text-align:center;">
+				<!-- Dimension
+				<select id="img_dimension" onChange="switchIMGDimension();">
+					<option value="256">256x256</option>
+					<option value="512" selected>512x512</option>
+					<option value="1024">1024x1024</option>
+				</select>
+				<div style="min-height:10px"></div> -->
+				<input id="file_name" type="text" size="12">
+				<select id="file_type" onChange="switchJPGQual();">
+					<option value="png" selected>PNG</option>
+					<option value="jpg">JPG</option>
+				</select>
+				<input id="file_jpg_qual" type="number" step="0.01" min='0.5' max='1' value="0.95" size="4" style="display:none;">
+				<div style="min-height:10px"></div>
+					<button id="download" class="download" style="width: 8em;  height: 2em;"><b>Download</b></button>
+					<!--<img src="images/Download_NormalMap_128.png"/>-->
 			</div>
 		</td><td align="center">
 			If you like this, please
@@ -813,6 +826,11 @@
 	</footer>
 
 	<!-- Has to be down here! -->
+	
+	<script src="javascript/extern/blob.js" type="text/javascript" ></script>
+	<script src="javascript/extern/canvas-toBlob.js" type="text/javascript" ></script>
+	<script src="javascript/extern/filesaver.min.js" type="text/javascript" ></script>
+
 	<script src="javascript/helper.js" type="text/javascript"></script>
 	<script src="javascript/download.js" type="text/javascript"></script>
 	<script src="javascript/noise.js" type="text/javascript"></script>
@@ -827,7 +845,7 @@
 	<script src="javascript/tex_textiles.js" type="text/javascript"></script>
 	<script src="javascript/tex_tiling.js" type="text/javascript"></script>
 	
-	<script src="javascript/ganalytics.js" type="text/javascript" ></script>
+	<script src="javascript/extern/ganalytics.js" type="text/javascript" ></script>
 		
 	<script> 
 		// initialization		
