--- a/index.html
+++ b/index.html
@@ -501,11 +501,40 @@
 							</td>
 							<td colspan=2>
 								<input type="range" id="terrain_shadow_strength_slider" min="1" max="100" value="40" step="1"
-									onchange="document.getElementById('terrain_shadow_strength').value = this.value; updateTexture();"
+									onchange="document.getElementById('terrain_shadow_strength').value = this.value; updateTexture('shadow');"
 									style="width:50%;vertical-align:top;">
 								<input type="number" id="terrain_shadow_strength" 
-									onchange="document.getElementById('terrain_shadow_strength_slider').value = this.value; updateTexture();"
+									onchange="document.getElementById('terrain_shadow_strength_slider').value = this.value; updateTexture('shadow');"
 									style="width:52px;" min="1" value="40" max="100" step="1"/>
+							</td>
+
+							
+						</tr>
+
+						<tr class="suboption_settings">
+							<td>
+								X
+							</td>
+							<td colspan=2>
+								<input type="range" id="terrain_shadow_xpos_slider" min="-50" max="600" value="-50" step="1"
+									onchange="document.getElementById('terrain_shadow_xpos').value = this.value; updateTexture('shadow');"
+									style="width:50%;vertical-align:top;">
+								<input type="number" id="terrain_shadow_xpos" 
+									onchange="document.getElementById('terrain_shadow_xpos_slider').value = this.value; updateTexture('shadow');"
+									style="width:52px;" min="-50" value="-50" max="600" step="1"/>
+							</td>
+						</tr>
+						<tr class="suboption_settings">
+							<td>
+								Y
+							</td>
+							<td colspan=2>
+								<input type="range" id="terrain_shadow_ypos_slider" min="-50" max="600" value="-50" step="1"
+									onchange="document.getElementById('terrain_shadow_ypos').value = this.value; updateTexture('shadow');"
+									style="width:50%;vertical-align:top;">
+								<input type="number" id="terrain_shadow_ypos" 
+									onchange="document.getElementById('terrain_shadow_ypos_slider').value = this.value; updateTexture('shadow');"
+									style="width:52px;" min="-50" value="-50" max="600" step="1"/>
 							</td>
 						</tr>
 						</table>
@@ -852,6 +881,7 @@
 	<script src="javascript/extern/blob.js" type="text/javascript" ></script>
 	<script src="javascript/extern/canvas-toBlob.js" type="text/javascript" ></script>
 	<script src="javascript/extern/filesaver.min.js" type="text/javascript" ></script>
+	<script src="javascript/extern/glmatrix/gl-matrix-min.js" type="text/javascript"></script>
 
 	<script src="javascript/helper.js" type="text/javascript"></script>
 	<script src="javascript/download.js" type="text/javascript"></script>
