optimised shadow strength switching

--- a/index.html
+++ b/index.html
@@ -501,10 +501,10 @@
 							</td>
 							<td colspan=2>
 								<input type="range" id="terrain_shadow_strength_slider" min="1" max="100" value="40" step="1"
-									onchange="document.getElementById('terrain_shadow_strength').value = this.value; updateTexture('shadow');"
+									onchange="document.getElementById('terrain_shadow_strength').value = this.value; updateTexture('shadow_strength');"
 									style="width:50%;vertical-align:top;">
 								<input type="number" id="terrain_shadow_strength" 
-									onchange="document.getElementById('terrain_shadow_strength_slider').value = this.value; updateTexture('shadow');"
+									onchange="document.getElementById('terrain_shadow_strength_slider').value = this.value; updateTexture('shadow_strength');"
 									style="width:52px;" min="1" value="40" max="100" step="1"/>
 							</td>
 
